# super-yane

./: .gitignore  Cargo.toml
app/: Cargo.toml  build.rs
app/src/: application.rs  apu_snapshot.rs  audio.rs  cpu_snapshot.rs  emu_state.rs  engine.rs  instruction_snapshot.rs  main.rs  program.rs  table.rs  utils.rs
app/src/disassembler/: disassembler.rs  instruction.rs  label.rs  mod.rs
app/src/profiler/: mod.rs  profiler.rs
app/src/widgets/: background_table.rs  mod.rs  ram.rs  screen.rs  text_table.rs  vertical_table.rs
app/ui/: app-window.slint  globals.slint  palette.slint  standard_controller.slint
app/ui/components/: apu_display.slint  backgrounds.slint  binary_data.slint  controls.slint  cpu.slint  cpu_display.slint  disassembly.slint  dsp_display.slint  high_low_register.slint  oam.slint  ppu_display.slint  register.slint  register_list.slint  standard_controller_input.slint  voices_display.slint
app/ui/structs/: apu_data.slint  background_data.slint  console_data.slint  cpu_data.slint  disassembly_line.slint  dsp_data.slint  palette.slint  ppu_data.slint  settings.slint  status_register_data.slint  voice.slint
core/: Cargo.toml
core/examples/minimal/: main.rs
core/src/: cartridge.rs  console.rs  dma.rs  input_port.rs  lib.rs  math.rs  ppu.rs  utils.rs
core/src/apu/: apu.rs  constants.rs  dsp.rs  mod.rs  voice.rs
core/src/cpu/: cpu.rs  mod.rs
core/src/ppu/: background.rs  color_math.rs  matrix.rs  mod.rs  ppu.rs  sprite.rs  utils.rs  window.rs
core/tests/: common.rs  cpu.rs  ppu.rs  spc.rs
core/tests/roms/: credits.txt
core/tests/snapshots/: cpu__lsr.snap  cpu__msc.snap.new  cpu__phl.snap.new  cpu__ret.snap.new  cpu__test_basic.snap  cpu__test_basic.snap.new  ppu__background_basic_2bpp_1.snap.new  ppu__background_basic_2bpp_2.snap  ppu__background_basic_2bpp_2.snap.new  ppu__background_basic_2bpp_3.snap.new  ppu__background_basic_2bpp_4.snap  ppu__background_basic_2bpp_4.snap.new  ppu__background_basic_4bpp.snap.new  spc__eor.snap  spc__sbc.snap
ide/: .gitignore  package.json  pnpm-lock.yaml
ide/src/: App.css  App.tsx  Audio.tsx  AudioNode.js
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/src/: lib.rs  main.rs  webgl.rs
spc700/: Cargo.toml
spc700/src/: lib.rs  opcode_data.rs  opcodes.rs  processor.rs  program_status_word.rs  status_register.rs
wdc65816/: Cargo.toml  opcode_data.json
wdc65816/src/: bus.rs  flag.rs  lib.rs  opcode_datas.rs  opcodes.rs  processor.rs  status_register.rs  u24.rs
wdc65816/tests/: test_bytes.rs  test_timings.rs
