[package]
name = "app"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[dependencies]
sdl2 = "0.37.0"
super-yane = { path = "../core" }
wdc65816 = { path = "../wdc65816" }
spc700 = { path = "../spc700" }
log = { workspace = true }
simplelog = "0.12.2"
iced = { version = "0.13.1", features = ["image"] }
itertools = "0.14.0"
rfd = "0.15.3"
