[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
super-yane = { path = "../core" }
wdc65816 = { path = "../wdc65816" }
spc700 = { path = "../spc700" }
log = { workspace = true }
simplelog = "0.12.2"
iced = { version = "0.14.0", features = ["image", "canvas"] }
itertools = "0.14.0"
rfd = "0.15.3"
wavers = "1.5.1"
derive-new = "0.7.0"
serde-brief = { version = "0.2.0", features = ["alloc"] }
slint = "1.16.0"
rodio = "0.22.2"

[build-dependencies]
slint-build = "1.14.1"
