[package]
name = "super-yane"
version = "0.1.6"
edition = "2024"
description = "An emulation library for the Super Nintendo Entertainment System"
license = "MIT"

[dependencies]
wdc65816 = { path = "../wdc65816", version = "0.1.0" }
spc700 = { path = "../spc700", version = "0.1.0" }
log = { workspace = true }
paste = "1.0.15"
derivative = "2.2.0"
serde = {version = "1.0.228", features = ["derive"]}
serde-big-array = "0.5.1"
derive-new = "0.7.0"
seeded-random = "0.6.0"

[dev-dependencies]
insta = "1.43.1"
sdl3 = "0.14.36"
serde-brief = { version = "0.2.0", features = ["alloc"] }
