[package]
name = "wdc65816"
version = "0.1.0"
edition = "2024"
description = "An emulation library for the WDC 65816 processor"
license = "MIT"

[dependencies]
log = { workspace = true }
serde = {version = "1.0.219", features = ["derive"]}

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
